# Aurelius-IDE

./: README.md  package-lock.json  package.json  vite.config.js
scripts/: install-arch-local.sh
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs_commands.rs  git_commands.rs  live_server_commands.rs  mod.rs  project_tools_commands.rs  session_commands.rs  system_commands.rs  task_commands.rs  terminal_commands.rs
src-tauri/src/core/: fs.rs  mod.rs  project_tools.rs  session.rs  system.rs
src/app/: app-ai-actions.js  app-command-actions.js  app-context-menu.js  app-file-actions.js  app-icons.js  app-live-server.js  app-monitor.js  app-panel-actions.js  app-project-actions.js  app-project-tools.js  app-quick-open.js  app-render.js  app-session.js  app-settings.js  app-utils.js  app.js  i18n.js  manual.md  state.js
src/components/activity-bar/: activity-bar.css  activity-bar.js
src/components/ai/: ai-panel.css  ai-panel.js
src/components/bottom-panel/: bottom-panel.css  bottom-panel.js
src/components/command-help/: command-help.css  command-help.js
src/components/command-palette/: command-palette.css  command-palette.js
src/components/context-menu/: context-menu.css  context-menu.js
src/components/ui/: modal.css  (+3 more)
src/editor/: codemirror.js
src/services/: fs.service.js  git.service.js  live-server.service.js  project-tools.service.js  session.service.js  system.service.js  tasks.service.js  terminal.service.js
src/styles/: base.css  layout.css  themes.css  variables.css
(+24 files in other folders)
